--- a/cool-wheelsclient/package.json
+++ b/cool-wheelsclient/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "jest-editor-support": "^30.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
