--- a/cool-wheelsclient/package.json
+++ b/cool-wheelsclient/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "jest-editor-support": "^30.0.2",
+    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
