--- a/cool-wheelsclient/package.json
+++ b/cool-wheelsclient/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "jest-editor-support": "^30.0.2",
     "react": "^18.0.0",
