--- a/cool-wheelsclient/package.json
+++ b/cool-wheelsclient/package.json
@@ -12,6 +12,7 @@
     "jest-editor-support": "^30.0.2",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
