--- a/cool-wheelsclient/package.json
+++ b/cool-wheelsclient/package.json
@@ -10,14 +10,16 @@
     "bootstrap": "^5.1.3",
     "eslint": "^8.13.0",
     "jest-editor-support": "^30.0.2",
+    "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
-    "react": "^18.0.0",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.3.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "use-history": "^1.4.1",
     "reactstrap": "^9.0.2",
+    "sass": "^1.51.0",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
