--- a/cool-wheelsclient/package.json
+++ b/cool-wheelsclient/package.json
@@ -17,8 +17,8 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "use-history": "^1.4.1",
     "reactstrap": "^9.0.2",
-    "sass": "^1.51.0",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
