Added frontend authentication

--- a/Cool-WheelsAPI/appsettings.json
+++ b/Cool-WheelsAPI/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;database=CoolWheelsMVC;integrated security=true"
-  }
+  },
+  "FirebaseProjectId": "cool-wheels"
 }
