--- a/cool-wheelsclient/package.json
+++ b/cool-wheelsclient/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "eslint": "^8.13.0",
+    "firebase": "^9.7.0",
     "jest-editor-support": "^30.0.2",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
