--- a/cool-wheelsclient/.env
+++ b/cool-wheelsclient/.env
@@ -1,1 +1,8 @@
 REACT_APP_API_KEY="AIzaSyBVNacLCZ2qTPj7SPkM2aJA4UOGmcFt0QE"
+REACT_APP_AUTH_DOMAIN="cool-wheels.firebaseapp.com"
+REACT_APP_DATABASE_URL=XXX
+REACT_APP_PROJECT_ID="cool-wheels"
+REACT_APP_STORAGE_BUCKET="cool-wheels.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID="955197793614"
+REACT_APP_APP_ID="1:955197793614:web:a0817af46399b8e195aa1f"
+REACT_APP_MEASUREMENT_ID="G-K206GB3M1C"
