Users can only see their edit and delete unless admin

--- a/cool-wheelsclient/.env
+++ b/cool-wheelsclient/.env
@@ -6,3 +6,4 @@ REACT_APP_STORAGE_BUCKET="cool-wheels.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID="955197793614"
 REACT_APP_APP_ID="1:955197793614:web:a0817af46399b8e195aa1f"
 REACT_APP_MEASUREMENT_ID="G-K206GB3M1C"
+REACT_APP_ADMIN_UID=XXX
